--- a/index.html
+++ b/index.html
@@ -323,6 +323,11 @@ footer a:hover {
         <h3>Comet FRC</h3>
         <p>A Java powered repo utlizing many different libararies.</p>
       </div>
+      <div class="project-box">
+        <img src="path-to-image2.jpg" alt="BAAP Website">
+        <h3>BAAP Website</h3>
+        <p>A Vue.js-powered website for showcasing student projects and achievements.</p>
+      </div>
       
     </div>
   </div>
