--- a/index.html
+++ b/index.html
@@ -2,27 +2,95 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Avi Sharma Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=DM+Sans:wght@400;700&display=swap" rel="stylesheet" />
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
       darkMode: 'class',
+      theme: {
+        extend: {
+          fontFamily: {
+            sans: ['"DM Sans"', 'Inter', 'sans-serif']
+          }
+        }
+      }
     };
   </script>
-   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
+  <style>
+    .lightbox:hover {
+      transform: scale(1.05);
+      z-index: 10;
+    }
+
+    img.project-img {
+      width: 100%;
+      height: 216px;
+      object-fit: cover;
+    }
+  </style>
 </head>
 
-<body class="bg-white dark:bg-gray-900 text-gray-900 dark:text-white font-inter">
+<body class="bg-white dark:bg-gray-900 text-gray-900 dark:text-white font-sans">
   <div class="container mx-auto px-4 py-8">
     <!-- Header with Typewriter Effect and Theme Toggle -->
     <div class="flex justify-between items-center mb-8">
       <h1 id="typewriter" class="text-4xl font-bold whitespace-nowrap"><span id="typed-text"></span><span id="cursor" class="ml-1">|</span></h1>
       <button id="theme-toggle" class="bg-gray-200 dark:bg-gray-700 p-2 rounded-md">
-        <span id="theme-icon">🌞</span>
+        <i id="theme-icon" class="fas fa-sun"></i>
       </button>
+    </div>
+
+    <!-- Projects -->
+    <div class="mb-12">
+      <h2 class="text-4xl font-bold text-center mb-8">Projects</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 items-stretch">
+        <!-- Project Card -->
+        <div class="bg-gray-100 dark:bg-gray-800 p-4 rounded-lg shadow transform transition-transform duration-300 lightbox flex flex-col h-[420px]">
+          <img src="first.png" alt="FRC Scouting App" class="project-img rounded mb-4">
+          <h3 class="text-xl font-bold mb-2">FRC Scouting App</h3>
+          <p class="text-sm">An app which can be used as alternative to TBA to collect and analyze match data for strategic decisions.</p>
+        </div>
+
+        <div class="bg-gray-100 dark:bg-gray-800 p-4 rounded-lg shadow transform transition-transform duration-300 lightbox flex flex-col h-[420px]">
+          <img src="betterness.jpg" alt="Betterness" class="project-img rounded mb-4">
+          <h3 class="text-xl font-bold mb-2">Betterness</h3>
+          <p class="text-sm">A SwiftUI wellness app that tracks moods, journals, and personal growth metrics.</p>
+        </div>
+
+        <div class="bg-gray-100 dark:bg-gray-800 p-4 rounded-lg shadow transform transition-transform duration-300 lightbox flex flex-col h-[420px]">
+          <img src="COMET.png" alt="Comet FRC" class="project-img rounded mb-4">
+          <h3 class="text-xl font-bold mb-2">Comet FRC</h3>
+          <p class="text-sm">A Java-based control system for our FRC team's Marina robot.</p>
+        </div>
+
+        <div class="bg-gray-100 dark:bg-gray-800 p-4 rounded-lg shadow transform transition-transform duration-300 lightbox flex flex-col h-[420px]">
+          <img src="BAAP.png" alt="BAAP Website" class="project-img rounded mb-4">
+          <h3 class="text-xl font-bold mb-2">BAAP Website</h3>
+          <p class="text-sm">A website for the Battlefield High School Aeronautics and Aviation Program featuring team pages and flight logs.</p>
+        </div>
+
+        <div class="bg-gray-100 dark:bg-gray-800 p-4 rounded-lg shadow transform transition-transform duration-300 lightbox flex flex-col h-[420px]">
+          <img src="todo-public.webp" alt="ToDo Public" class="project-img rounded mb-4">
+          <h3 class="text-xl font-bold mb-2">ToDo Public</h3>
+          <p class="text-sm">A public to-do list app using Swift.</p>
+        </div>
+
+        <div class="bg-gray-100 dark:bg-gray-800 p-4 rounded-lg shadow transform transition-transform duration-300 lightbox flex flex-col h-[420px]">
+          <img src="SpotiStats.jpg" alt="SpotiStats" class="project-img rounded mb-4">
+          <h3 class="text-xl font-bold mb-2">SpotiStats</h3>
+          <p class="text-sm">A Spotify data analytics dashboard that visualizes listening habits and top tracks.</p>
+        </div>
+
+        <div class="bg-gray-100 dark:bg-gray-800 p-4 rounded-lg shadow transform transition-transform duration-300 lightbox flex flex-col h-[420px]">
+          <img src="https://via.placeholder.com/400x200" alt="F1 Telemetry Project" class="project-img rounded mb-4">
+          <h3 class="text-xl font-bold mb-2">F1 Telemetry Project</h3>
+          <p class="text-sm">A data visualization and prediction tool using FastF1 telemetry data to analyze races and predict outcomes.</p>
+        </div>
+      </div>
     </div>
 
     <!-- Timeline -->
@@ -30,51 +98,16 @@
       <h2 class="text-2xl font-semibold mb-4">Timeline</h2>
       <div class="border-l-4 border-blue-500 pl-4 space-y-6">
         <div>
-          <h3 class="text-xl font-bold">2022</h3>
+          <h3 class="text-xl font-bold">2022-23</h3>
           <p>Started tutoring at Kumon, began coding projects and learning Swift.</p>
         </div>
         <div>
-          <h3 class="text-xl font-bold">2023</h3>
+          <h3 class="text-xl font-bold">2023-24</h3>
           <p>Became Lead Programmer in FRC, launched several personal projects, mentored younger students, and published research paper.</p>
         </div>
         <div>
-          <h3 class="text-xl font-bold">2024</h3>
+          <h3 class="text-xl font-bold">2024-25</h3>
           <p>Finished several iOS apps, nominated for Dean's List, founded BHS Avionics participating in TARC, and took COMET Robotics to districts.</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- Projects -->
-    <div class="mb-12">
-      <h2 class="text-2xl font-semibold mb-4">Projects</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-        <div class="bg-gray-100 dark:bg-gray-800 p-4 rounded-lg shadow">
-          <h3 class="text-xl font-bold mb-2">FRC Scouting App</h3>
-          <p>An app which can be used as alternative to TBA to collect and analyze match data for strategic decisions.</p>
-        </div>
-        <div class="bg-gray-100 dark:bg-gray-800 p-4 rounded-lg shadow">
-          <h3 class="text-xl font-bold mb-2">Betterness</h3>
-          <p>A SwiftUI wellness app that tracks moods, journals, and personal growth metrics.</p>
-        </div>
-        <div class="bg-gray-100 dark:bg-gray-800 p-4 rounded-lg shadow">
-          <h3 class="text-xl font-bold mb-2">Comet FRC</h3>
-          <p>A Java-based control system for our FRC team's Marina robot</p>
-        </div>
-        <div class="bg-gray-100 dark:bg-gray-800 p-4 rounded-lg shadow">
-          <h3 class="text-xl font-bold mb-2">BAAP Website</h3>
-          <p>A website for the Battlefield High School Aeronautics and Aviation Program featuring team pages and flight logs.</p>
-        </div>
-        <div class="bg-gray-100 dark:bg-gray-800 p-4 rounded-lg shadow">
-          <h3 class="text-xl font-bold mb-2">ToDo Public</h3>
-          <p>A public to-do list app using Swift.</p>
-        </div>
-        <div class="bg-gray-100 dark:bg-gray-800 p-4 rounded-lg shadow">
-          <h3 class="text-xl font-bold mb-2">SpotiStats</h3>
-          <p>A Spotify data analytics dashboard that visualizes listening habits and top tracks.</p>
-        </div>
-        <div class="bg-gray-100 dark:bg-gray-800 p-4 rounded-lg shadow">
-          <h3 class="text-xl font-bold mb-2">F1 Telemetry Project</h3>
-          <p>A data visualization and prediction tool using FastF1 telemetry data to analyze races and predict outcomes.</p>
         </div>
       </div>
     </div>
@@ -94,11 +127,11 @@
   </div>
 
   <script>
-    // Typewriter effect with blinking cursor
     const text = "Hi, I'm Avi Sharma.";
     let i = 0;
     const typedText = document.getElementById("typed-text");
     const cursor = document.getElementById("cursor");
+
     function typeWriter() {
       if (i < text.length) {
         typedText.innerHTML += text.charAt(i);
@@ -110,16 +143,19 @@
     }
     typeWriter();
 
-    // Theme toggle with sun/moon icon
     const toggle = document.getElementById('theme-toggle');
     const themeIcon = document.getElementById('theme-icon');
+
     function updateThemeIcon() {
       if (document.documentElement.classList.contains('dark')) {
-        themeIcon.textContent = '🌙';
+        themeIcon.classList.remove('fa-sun');
+        themeIcon.classList.add('fa-moon');
       } else {
-        themeIcon.textContent = '🌞';
+        themeIcon.classList.remove('fa-moon');
+        themeIcon.classList.add('fa-sun');
       }
     }
+
     toggle.addEventListener('click', () => {
       document.documentElement.classList.toggle('dark');
       updateThemeIcon();
