--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
       <footer class="text-center mt-12 pt-6 border-t dark:border-gray-700">
         <p>© 2025 Avi Sharma. All rights reserved.</p>
         <div class="flex justify-center space-x-6 mt-4">
-          <a href="https://www.linkedin.com/in/avi-sharma/" target="_blank" class="text-gray-800 dark:text-white hover:text-blue-500">
+          <a href="https://www.linkedin.com/in/avi-sharma-aa5a73223/" target="_blank" class="text-gray-800 dark:text-white hover:text-blue-500">
             <i class="fab fa-linkedin fa-2x"></i>
           </a>
-          <a href="https://github.com/avi-sharma" target="_blank" class="text-gray-800 dark:text-white hover:text-black">
+          <a href="https://github.com/Av1Sharma" target="_blank" class="text-gray-800 dark:text-white hover:text-black">
             <i class="fab fa-github fa-2x"></i>
           </a>
         </div>
