--- a/index.html
+++ b/index.html
@@ -69,41 +69,55 @@
     <div class="max-w-7xl mx-auto">
       <h2 class="text-4xl font-bold text-center mb-10">Projects</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+        <a href="/projects/frc-scouting-app.html">
         <div class="bg-white dark:bg-gray-900 p-4 rounded-lg shadow lightbox flex flex-col h-[420px]">
-          <img src="first.png" alt="FRC Scouting App" class="project-img rounded mb-4">
+          <img src="/images/first.png" alt="FRC Scouting App" class="project-img rounded mb-4">
           <h3 class="text-xl font-bold mb-2">FRC Scouting App</h3>
           <p class="text-sm">An app which can be used as alternative to TBA to collect and analyze match data for strategic decisions.</p>
         </div>
+      </a>
+    <a href="/projects/betterness.html">
         <div class="bg-white dark:bg-gray-900 p-4 rounded-lg shadow lightbox flex flex-col h-[420px]">
-          <img src="betterness.jpg" alt="Betterness" class="project-img rounded mb-4">
+          <img src="/images/betterness.jpg" alt="Betterness" class="project-img rounded mb-4">
           <h3 class="text-xl font-bold mb-2">Betterness</h3>
           <p class="text-sm">A SwiftUI wellness app that tracks moods, journals, and personal growth metrics.</p>
         </div>
+        </a>
+        <a href="/projects/comet-frc.html">
         <div class="bg-white dark:bg-gray-900 p-4 rounded-lg shadow lightbox flex flex-col h-[420px]">
-          <img src="COMET.png" alt="Comet FRC" class="project-img rounded mb-4">
+          <img src="/images/COMET.png" alt="Comet FRC" class="project-img rounded mb-4">
           <h3 class="text-xl font-bold mb-2">Comet FRC</h3>
           <p class="text-sm">A Java-based control system for our FRC team's Marina robot.</p>
         </div>
+        </a>
+        <a href="/projects/baap.html">
         <div class="bg-white dark:bg-gray-900 p-4 rounded-lg shadow lightbox flex flex-col h-[420px]">
-          <img src="BAAP.png" alt="BAAP Website" class="project-img rounded mb-4">
+          <img src="/images/BAAP.png" alt="BAAP Website" class="project-img rounded mb-4">
           <h3 class="text-xl font-bold mb-2">BAAP Website</h3>
           <p class="text-sm">A website for the Battlefield High School Aeronautics and Aviation Program featuring team pages and flight logs.</p>
         </div>
+        </a>
+        <a href="/projects/todo-public.html">
         <div class="bg-white dark:bg-gray-900 p-4 rounded-lg shadow lightbox flex flex-col h-[420px]">
-          <img src="todo-public.webp" alt="ToDo Public" class="project-img rounded mb-4">
+          <img src="/images/todo-public.webp" alt="ToDo Public" class="project-img rounded mb-4">
           <h3 class="text-xl font-bold mb-2">ToDo Public</h3>
           <p class="text-sm">A public to-do list app using Swift.</p>
         </div>
+        </a>
+        <a href="/projects/SpotiStats.html">
         <div class="bg-white dark:bg-gray-900 p-4 rounded-lg shadow lightbox flex flex-col h-[420px]">
-          <img src="SpotiStats.jpg" alt="SpotiStats" class="project-img rounded mb-4">
+          <img src="/images/SpotiStats.jpg" alt="SpotiStats" class="project-img rounded mb-4">
           <h3 class="text-xl font-bold mb-2">SpotiStats</h3>
           <p class="text-sm">A Spotify data analytics dashboard that visualizes listening habits and top tracks.</p>
         </div>
+        </a>
+        <a href="/projects/f1.html">
         <div class="bg-white dark:bg-gray-900 p-4 rounded-lg shadow lightbox flex flex-col h-[420px]">
-          <img src="f1.webp" alt="F1 Telemetry Project" class="project-img rounded mb-4">
+          <img src="/images/f1.webp" alt="F1 Telemetry Project" class="project-img rounded mb-4">
           <h3 class="text-xl font-bold mb-2">F1 Telemetry Project</h3>
           <p class="text-sm">A data visualization and prediction tool using FastF1 telemetry data to analyze races and predict outcomes.</p>
         </div>
+        </a>
       </div>
     </div>
   </section>
