--- a/projects/f1.html
+++ b/projects/f1.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Betterness - Avi Sharma Portfolio</title>
+  <title>F1 Telemetry - Avi Sharma Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=DM+Sans:wght@400;700&display=swap" rel="stylesheet" />
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
@@ -18,8 +18,8 @@
 
 <body class="bg-white dark:bg-gray-900 text-gray-900 dark:text-white font-sans">
   <section class="parallax min-h-screen flex flex-col justify-center items-center text-center px-4 bg-blue-100 dark:bg-blue-950">
-    <h1 class="text-5xl md:text-6xl font-bold mb-4">Betterness</h1>
-    <p class="text-lg md:text-xl max-w-xl mb-6">A SwiftUI wellness app that tracks moods, journals, and personal growth metrics.</p>
+    <h1 class="text-5xl md:text-6xl font-bold mb-4">F1 Telemetry</h1>
+    <p class="text-lg md:text-xl max-w-xl mb-6">A Python tool for visualizing telemetry data from F1 races using FastF1 API.</p>
     <div class="flex gap-4">
       <a href="#details" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-full transition">Project Details</a>
       <a href="/index.html" class="bg-gray-300 dark:bg-gray-700 hover:bg-gray-400 dark:hover:bg-gray-600 px-6 py-2 rounded-full transition">Back to Portfolio</a>
@@ -29,15 +29,15 @@
   <section id="details" class="bg-gray-100 dark:bg-gray-800 py-16 px-4">
     <div class="max-w-7xl mx-auto">
       <h2 class="text-4xl font-bold text-center mb-10">Project Details</h2>
-      <p class="text-lg mb-6">Betterness is a wellness app that helps users track their mental health through mood tracking, journaling, and progress tracking. Features include:</p>
+      <p class="text-lg mb-6">This project visualizes F1 telemetry data using Python, integrating the FastF1 API to extract real-time race data, which is then displayed through Plotly visualizations. Features include:</p>
       <ul class="list-disc pl-6 space-y-2">
-        <li>Mood tracking with customizable moods</li>
-        <li>Daily journaling feature</li>
-        <li>Personal growth metrics tracking</li>
+        <li>Live race telemetry visualization</li>
+        <li>Telemetry data filtering and analysis</li>
+        <li>Real-time race monitoring</li>
       </ul>
-      <p class="mt-6">Built with: Swift, SwiftUI</p>
+      <p class="mt-6">Built with: Python, Plotly, FastF1</p>
       <div class="mt-8 text-center">
-        <img src="betterness.jpg" alt="Betterness" class="max-w-md mx-auto rounded shadow">
+        <img src="f1-telemetry.jpg" alt="F1 Telemetry" class="max-w-md mx-auto rounded shadow">
       </div>
     </div>
   </section>
