--- a/projects/frc-scouting-app.html
+++ b/projects/frc-scouting-app.html
@@ -1,32 +1,50 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth dark">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FRC Scouting App - Avi Sharma</title>
-  <link href="https://cdn.tailwindcss.com" rel="stylesheet">
-  <script>
-    tailwind.config = {
-      darkMode: 'class',
-      theme: {
-        extend: {
-          fontFamily: {
-            sans: ['"DM Sans"', 'Inter', 'sans-serif']
-          }
-        }
-      }
-    };
-  </script>
+  <title>FRC Scouting App - Avi Sharma Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=DM+Sans:wght@400;700&display=swap" rel="stylesheet" />
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    .parallax {
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+  </style>
 </head>
 
 <body class="bg-white dark:bg-gray-900 text-gray-900 dark:text-white font-sans">
-  <div class="min-h-screen flex flex-col justify-center items-center text-center px-4">
-    <h1 class="text-4xl font-bold mb-4">FRC Scouting App</h1>
-    <p class="text-lg mb-8 max-w-2xl">Project description coming soon...</p>
-    <img src="first.png" alt="FRC Scouting App" class="rounded shadow-lg max-w-xl mb-6" />
-    <a href="index.html" class="text-blue-500 hover:underline">← Back to Home</a>
-  </div>
+  <section class="parallax min-h-screen flex flex-col justify-center items-center text-center px-4 bg-blue-100 dark:bg-blue-950">
+    <h1 class="text-5xl md:text-6xl font-bold mb-4">FRC Scouting App</h1>
+    <p class="text-lg md:text-xl max-w-xl mb-6">An app which can be used as an alternative to TBA to collect and analyze match data for strategic decisions.</p>
+    <div class="flex gap-4">
+      <a href="#details" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-full transition">Project Details</a>
+      <a href="/index.html" class="bg-gray-300 dark:bg-gray-700 hover:bg-gray-400 dark:hover:bg-gray-600 px-6 py-2 rounded-full transition">Back to Portfolio</a>
+    </div>
+  </section>
+
+  <section id="details" class="bg-gray-100 dark:bg-gray-800 py-16 px-4">
+    <div class="max-w-7xl mx-auto">
+      <h2 class="text-4xl font-bold text-center mb-10">Project Details</h2>
+      <p class="text-lg mb-6">The FRC Scouting App allows teams to easily record match data and make strategic decisions using real-time analysis. Features include:</p>
+      <ul class="list-disc pl-6 space-y-2">
+        <li>Match data collection and analysis</li>
+        <li>Team statistics tracking</li>
+        <li>Strategy insights based on data patterns</li>
+      </ul>
+      <p class="mt-6">Built with: JavaScript, React, Firebase</p>
+      <div class="mt-8 text-center">
+        <img src="first.png" alt="FRC Scouting App" class="max-w-md mx-auto rounded shadow">
+      </div>
+    </div>
+  </section>
+
+  <footer class="text-center mt-12 pt-6 border-t dark:border-gray-700">
+    <p>© 2025 Avi Sharma. All rights reserved.</p>
+  </footer>
 </body>
+
 </html>
