--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Avi Sharma Portfolio</title>
+  <title>Avi's Website</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=DM+Sans:wght@400;700&display=swap" rel="stylesheet" />
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -65,10 +65,15 @@
     </button>
   </section>
 
-  <section id="projects" class="parallax bg-gray-100 dark:bg-gray-800 py-16 px-4">
+  <section id="projects" class="relative parallax bg-gray-100 dark:bg-gray-800 py-16 px-4">
     <div class="max-w-7xl mx-auto">
       <h2 class="text-4xl font-bold text-center mb-10">Projects</h2>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+        <div class="absolute top-4 right-4">
+          <a href="/blog" class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-full text-sm shadow transition">
+            View My Blog
+          </a>
+        </div>
         <a href="/projects/frc-scouting-app.html">
         <div class="bg-white dark:bg-gray-900 p-4 rounded-lg shadow lightbox flex flex-col h-[420px]">
           <img src="/images/first.png" alt="FRC Scouting App" class="project-img rounded mb-4">
@@ -104,7 +109,7 @@
           <p class="text-sm">A public to-do list app using Swift.</p>
         </div>
         </a>
-        <a href="/projects/SpotiStats.html">
+        <a href="/projects/spotistats.html">
         <div class="bg-white dark:bg-gray-900 p-4 rounded-lg shadow lightbox flex flex-col h-[420px]">
           <img src="/images/SpotiStats.jpg" alt="SpotiStats" class="project-img rounded mb-4">
           <h3 class="text-xl font-bold mb-2">SpotiStats</h3>
