--- a/projects/baap.html
+++ b/projects/baap.html
@@ -20,9 +20,12 @@
   <section class="parallax min-h-screen flex flex-col justify-center items-center text-center px-4 bg-blue-100 dark:bg-blue-950">
     <h1 class="text-5xl md:text-6xl font-bold mb-4">BAAP Website</h1>
     <p class="text-lg md:text-xl max-w-xl mb-6">A website for the Battlefield High School Aeronautics and Aviation Program, showcasing program details and event updates.</p>
-    <div class="flex gap-4">
+    <div class="flex gap-4 justify-center">
       <a href="#details" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-full transition">Project Details</a>
       <a href="/index.html" class="bg-gray-300 dark:bg-gray-700 hover:bg-gray-400 dark:hover:bg-gray-600 px-6 py-2 rounded-full transition">Back to Portfolio</a>
+    </div>
+    <div class="flex justify-center mt-4">
+      <a href="http://bhsavionics.github.io" target="bhsavionics.github.io" class="inline-block bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-full transition">See It Here</a>
     </div>
   </section>
 
@@ -37,7 +40,7 @@
       </ul>
       <p class="mt-6">Built with: HTML, CSS, JavaScript</p>
       <div class="mt-8 text-center">
-        <img src="baap-website.jpg" alt="BAAP Website" class="max-w-md mx-auto rounded shadow">
+        <img src="/images/website.png" alt="BAAP Website" class="max-w-md mx-auto rounded shadow">
       </div>
     </div>
   </section>
