Enhance project descriptions for Comet FRC and SpotiStats, adding new features and updating technology stacks.

--- a/projects/comet-frc.html
+++ b/projects/comet-frc.html
@@ -34,11 +34,14 @@
       <h2 class="text-4xl font-bold text-center mb-10">Project Details</h2>
       <p class="text-lg mb-6">Comet FRC is a Java-based control system designed for the Marina robot used in FRC competitions. It supports real-time motor control and sensor feedback to make autonomous decisions.</p>
       <ul class="list-disc pl-6 space-y-2">
+        <li>Advanced autonomous pathing to specific nodes on the reef and barge shooting locations</li>
+        <li>Full simulation capabilities using AdvantageScope and the AdvantageKit framework</li>
+        <li>Precise subsystem control using PID controllers with Feed Forward compensation</li>
         <li>Motor control algorithms</li>
         <li>Sensor data integration</li>
         <li>Real-time feedback loop for autonomous behavior</li>
       </ul>
-      <p class="mt-6">Built with: Java, FRC Libraries</p>
+      <p class="mt-6">Built with: Java, WPILIB, PathPlanner, and FRC Libraries</p>
     </div>
   </section>
 
