--- a/projects/spotistats.html
+++ b/projects/spotistats.html
@@ -34,11 +34,17 @@
       <h2 class="text-4xl font-bold text-center mb-10">Project Details</h2>
       <p class="text-lg mb-6">SpotiStats is an app that helps users track and analyze their Spotify listening habits, providing insights such as most listened songs, genres, and time spent on music.</p>
       <ul class="list-disc pl-6 space-y-2">
-        <li>Real-time user statistics analysis</li>
-        <li>Song and genre tracking</li>
+        <li>Real-time user statistics analysis including:
+          <ul class="list-disc pl-6 mt-2">
+            <li>Most popular listening hours</li>
+            <li>Top artists and tracks</li>
+            <li>Customizable time intervals (4 weeks, 6 months, all-time)</li>
+          </ul>
+        </li>
+        <li>Data visualization and analysis</li>
         <li>Customizable insights based on listening patterns</li>
       </ul>
-      <p class="mt-6">Built with: Python, Spotipy API</p>
+      <p class="mt-6">Built with: Python, Spotipy API, pandas, matplotlib</p>
       <div class="mt-8 text-center">
         <img src="spotistats.jpg" alt="SpotiStats" class="max-w-md mx-auto rounded shadow">
       </div>
